# open-mika

./: .gitignore  .travis.yml  CMakeLists.txt  Jamfile  Jamrules  KernelInfo.mk  LICENSE.txt  Makefile  README.md  README.txt  WonkaInfo.mk  build-imsys.sh.in  index.html  minicom.cap  output.txt  params.json  temp.c  typescript
Configuration/: index.html
Configuration/ant/: arm-linux  default  imx27  openwrt  pc  pc-awt  pc-clang  pc-fdev  pc-w64  pc5  rt5350
Configuration/awt/: fdev  fdev.mk  xsim.mk
Configuration/cpu/: arm  armel  armel.mk  im4000.mk  mips  ppc  x86  x86.mk
Configuration/host/: freertos.mk  linux.mk  win64
Configuration/mika/: default.mk
Configuration/platform/: arm-freertos.mk  arm-linux.mk  im4000.mk  im4000.mk2  imx27  imx27.mk  mips-uclinux  pc  pc-awt.mk  pc-clang  pc-clang.mk  pc-fdev  pc-fdev.mk  pc-gcc.mk  pc-w64  pc.mk  pc5.mk  rt5350
Configuration/toolchain/: clang.mk  gcc.mk
Configuration/wonka/: default
Mika/branches/java.math/: Jamrules  LICENSE.txt
Mika/branches/java.math/ant/: common.xml
Mika/branches/memacct/ant/: common.xml
Mika/branches/memacct/tool/: pngifier.sh
Mika/branches/mika_classloader/: Jamrules  README.txt
Mika/branches/mika_classloader/CHANGES/: 0.8.1  0.9.5
Mika/branches/mika_classloader/doc/: BUILD.txt  TESTS.txt  TREE-LAYOUT.txt
Mika/branches/precompiled/ant/: build.xml
Mika/branches/thierry/: Jamrules
Mika/branches/thierry/ant/: tool.xml
Mika/tags/PKG-adhoco-1/: Jamfile  Jamrules
Mika/tags/PKG-adhoco-4/: Jamfile  Jamrules
Mika/tags/RELEASE-1.4.6-FINAL/: Jamrules
Mika/trunk/: Jamrules  build.xml  index.html
Mika/trunk/CHANGES/: 0.9.1
Mika/trunk/ant/: build.xml  common.xml  mika_build.xml  tool.xml
Mika/trunk/core-vm/: Jamfile  main.c
Mika/trunk/doc/: BUILD.txt  COMMAND_LINE.txt  TREE-LAYOUT.txt
Mika/trunk/tool/: Jamfile  pngifier.sh
ant/: build.xml  common.xml  mika_build.xml  sample.xml  tool.xml
core-vm/: Jamfile  Makefile  index.html  main.c
core-vm/doc/: README
core-vm/hal/: Jamfile  Makefile
core-vm/hal/hostos/: Jamfile
core-vm/include/: Throwable.h  arrays.h  bar.h  bytecode.h  calls.h  clazz.h  comms.h  constant.h  debug.h  deflate_driver.h  deflate_internals.h  descriptor.h  device.h  dispatcher.h  environment.h  exception.h  exec.h  fastcall.h  fields.h  file-descriptor.h  hashtable.h  heap.h  jni.h  launcher.h  loading.h  locks.h  math64.h  md5.h  memset.h  methods.h  mika_stack.h  mika_threads.h  misc.h  opcodes.h  package.h  profile.h  reflection.h  sha.h  threads.h  ts-mem.h  (+6 more)
core-vm/java/: Makefile
core-vm/resource/: mcl.mf
core-vm/resource/system/: device.config  mika.hosts  mika.properties  mika.timezones  wonka.policy
core-vm/src/: Makefile
core-vm/src/adt/: Makefile  fifo.c  ht.c  wordset.c
core-vm/src/classfile/: Makefile  clazz.c  constant.c  descriptor.c
core-vm/src/driver/: Makefile  device_registry.c  driver_registry.c
core-vm/src/heap/: Makefile  collector.c  instance.c
core-vm/src/loading/: Makefile  bytecode.c  fastcall.c  initialize.c  link.c  refer.c  supers.c  verify.c
core-vm/src/misc/: Makefile  debug.c  inits.c  launcher.c  misc.c  modules.c
core-vm/src/native/: Makefile
core-vm/src/security/: Makefile  acc.c
core-vm/src/vm/: Jamfile  Makefile  calls.c  chars.c  checks.c  core-classes.in  core-classes5.in  dates.c  dispatcher.c  exception.c  fields.c  ieee754.c  interpreter.c  jni-classes.in  jni.c  loading.c  locks.c  md5.c  methods.c  package.c  reflection.c  stack.c  strings.c  threads.c  ts-mem.c  warrays.c  wonky.c  zipfiles.c
core-vm/tests/: main_test.c  tests.h  ts-mem-test.c
doc/: BUILD.txt  TESTS.txt  TREE-LAYOUT.txt
doc/cc9p/UserManual/: Features.html  History.html  Parameters.html  Preface.html  Running.html  Support.html
doc/generic/UserManual/: Debug.html  Preface.html  Project.html  Requirements.html  Support.html  index.html
doc/unc20/UserManual/: Debug.html  Demo.html  Features.html  History.html  Parameters.html  Preface.html  Support.html
doc/unc90/UserManual/: Parameters.html  Preface.html  Project.html
sample/apps/java/: HelloInternet.java  HelloSerial.java  Makefile
sample/awt-apps/java/: Metronome.java
tool/: Makefile
tool/credtab/: Jamfile
tool/jembench/: .project
tool/jembench/src/: COPYING  Makefile
tool/mauve/: Makefile
tool/mauve/java/: Makefile
tool/mauve/resource/: wonkatest.properies  wonkatest.properties
tool/release/: mauveplot  memgraph  mkprod  otest  refmauve.fail2  rpm_include  vte
tool/romify/: romify.lua
tool/script/: awt-classes-c.awk  awt-classes-h.awk  common-classes-c.awk  common-classes-h.awk  core-classes-c.awk  core-classes-h.awk  dispatchers.awk  extensions.awk  imsys-classes-c.awk  imsys-classes-h.awk  jni-classes-c.awk  jni-classes-h.awk  math-classes-c.awk  math-classes-h.awk  uart-classes-c.awk  uart-classes-h.awk  unicode.awk
tool/visualtest/: vte.mf
tool/visualtest/resource/: vte.properties
vm-cmp/awt/: index.html
vm-cmp/awt/none/: Makefile
vm-cmp/awt/rudolph/: Jamfile  Makefile
vm-cmp/engine/common/: Makefile
vm-cmp/engine/generic/: Makefile
vm-cmp/fp/hauser/: Makefile
vm-cmp/fp/native/: Makefile
vm-cmp/fs/: index.html
vm-cmp/fs/native/: Makefile
vm-cmp/fs/vfs.save/: Jamfile
vm-cmp/jar/java/: Makefile
vm-cmp/kernel/: index.html
vm-cmp/kernel/common/: Makefile
vm-cmp/kernel/o4e/: wonka.text
vm-cmp/kernel/o4f/: Makefile
vm-cmp/kernel/o4p/: Jamfile  Makefile
vm-cmp/kernel/oswald/: Makefile
vm-cmp/math/native/: Makefile
vm-cmp/network/: index.html
vm-cmp/network/native/: Makefile
vm-cmp/network/none/: Makefile
vm-ext/bytecodetest/: Makefile
vm-ext/bytecodetest/doc/: BytecodeEmulationTestPlan.md
vm-ext/bytecodetest/java/: Makefile
vm-ext/comm/: Makefile
vm-ext/comm/java/: Makefile
vm-ext/comm/resource/: comm.mf
vm-ext/imsys/: Makefile
vm-ext/imsys/java/: Makefile
vm-ext/jpda/: Makefile
zlib/include/: zconf.h
zlib/src/: Jamfile  adler32.c  crc32.c  zutil.c
(+5964 files in other folders)
